--- a/include/OpenMS/config.h.in
+++ b/include/OpenMS/config.h.in
@@ -46,6 +46,12 @@
 #define OPENMS_DATA_PATH "@CF_OPENMS_DATA_PATH@"
 #define OPENMS_PACKAGE_VERSION "@CF_OPENMS_PACKAGE_VERSION@"
 
+// The directory where OpenMS is build
+#define OPENMS_SOURCE_PATH "@PROJECT_SOURCE_DIR@"
+
+// The directory where the OpenMS sources are located
+#define OPENMS_BINARY_PATH "@PROJECT_BINARY_DIR@"
+
 // Macro to construct a c string containing the complete path to the test data
 #define OPENMS_GET_TEST_DATA_PATH(filename) (std::string("@CF_OPENMS_TEST_DATA_PATH@") + filename).c_str()
 #define OPENMS_GET_TEST_DATA_PATH_MESSAGE(prefix,filename,suffix) (prefix + std::string("@CF_OPENMS_TEST_DATA_PATH@") + filename + suffix).c_str()
