--- a/source/TEST/CMakeLists.txt
+++ b/source/TEST/CMakeLists.txt
@@ -84,12 +84,13 @@ endif()
 foreach(i ${TEST_executables})
 	add_executable(${i} ${i}.C)
 	target_link_libraries(${i} ${OPENMS_LIBRARIES})
+	add_dependencies(${i} TOPP UTILS Tutorials_build FuzzyDiff)
   add_test(${i} ${CMAKE_RUNTIME_OUTPUT_DIRECTORY}/${i})
 endforeach(i)
 
 ### "test_build" target
 add_custom_target(test_build)
-add_dependencies(test_build ${TEST_executables} TOPP FuzzyDiff)
+add_dependencies(test_build ${TEST_executables} TOPP UTILS Tutorials_build FuzzyDiff)
 
 ### add filenames to Visual Studio solution tree
 set(sources_VS)
