** fixed some warnings
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6115 6adb6e08-d915-0410-941f-83917bcadc18

--- a/include/OpenMS/openms_package_version.h.in
+++ b/include/OpenMS/openms_package_version.h.in
@@ -37,5 +37,9 @@
 // $Authors: $
 // --------------------------------------------------------------------------
 
+#ifndef OPENMS_PACKAGE_VERSION_H
+#define OPENMS_PACKAGE_VERSION_H
+
 #define OPENMS_PACKAGE_VERSION "@CF_OPENMS_PACKAGE_VERSION@"
 
+#endif
