disabled install target if install prefix is not given
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/branches/Release1.6@6420 6adb6e08-d915-0410-941f-83917bcadc18

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -935,6 +935,8 @@ else()
 	cmake_export_build_settings(${PROJECT_BINARY_DIR}/cmake/OpenMSBuildSettings.cmake)
 	export_library_dependencies(${PROJECT_BINARY_DIR}/cmake/OpenMSLibraryDepends.cmake)
 
-	include(cmake/install.cmake)
+	if (NOT "${INSTALL_PREFIX}" STREQUAL ".")
+		include(cmake/install.cmake)
+	endif()
 endif()
 
