--- a/cmake/OpenMSConfig.cmake.in
+++ b/cmake/OpenMSConfig.cmake.in
@@ -1,11 +1,13 @@
 ### cmake OpenMS config file for external code
 
-### Find the OpenMS includes and library
-set(OPENMS_FOUND 1)
 set(OPENMS_INCLUDE_DIRS "@CONTRIB_INCLUDE_DIR@" "@QT_INCLUDE_DIR@" "@PROJECT_SOURCE_DIR@/include" "@PROJECT_BINARY_DIR@/include")
-# Linux: libOpenMS.so will be in ./lib, Windows: OpenMS.lib will be directly in the binary tree
-set(OPENMS_LIBRARIES_DIRS "@CONTRIB_LIB_DIR@" "@CMAKE_LIBRARY_OUTPUT_DIRECTORY@" "@PROJECT_BINARY_DIR@")
-set(OPENMS_LIBRARIES "@OPENMS_LIBRARIES@" "@OPENMS_DEP_LIBRARIES@")
-set(OpenMS_BUILD_SETTINGS_FILE "@PROJECT_BINARY_DIR@/cmake/OpenMSBuildSettings.cmake")
-set(OpenMS_USE_FILE "@PROJECT_SOURCE_DIR@/cmake/OpenMSUse.cmake")
+
+set(OPENMS_ADDCXX_FLAGS "@CF_OPENMS_ADDCXX_FLAGS@")
+
+set(OPENMS_DEFINITIONS "@CF_OPENMS_ADD_DEFINITIONS@")
+
+## create target 'OpenMS', including its dependencies
+## Linux: libOpenMS.so will be in ./lib, Windows: OpenMS.lib will be directly in the binary tree
+include(@CF_LibOpenMSExport@)
+
 
