** minor fix for external tests
git-svn-id: https://open-ms.svn.sourceforge.net/svnroot/open-ms/OpenMS@6499 6adb6e08-d915-0410-941f-83917bcadc18

--- a/source/TEST/EXTERNAL/CMakeLists.txt
+++ b/source/TEST/EXTERNAL/CMakeLists.txt
@@ -46,5 +46,5 @@ else(OpenMS_FOUND)
   message(FATAL_ERROR "OpenMSConfig.cmake file not found!")
 endif(OpenMS_FOUND)
 
-INCLUDE(Dart) ## for Nighlty Build log
-add_test(Main)
+include(Dart) ## for Nighlty Build log
+add_test(TestExternalCode)
