--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -243,8 +243,9 @@ if ("${CONTRIB_CUSTOM_DIR}" STREQUAL "")
   message(STATUS "If you want to set your own path to contrib use:")
 	message(STATUS "   cmake <..more options..> -D CONTRIB_CUSTOM_DIR:PATH=\"/my/path/to/contrib\" \"${PROJECT_SOURCE_DIR}\"")
 else()
-	set(CONTRIB_DIR ${CONTRIB_CUSTOM_DIR})
-	message(STATUS "Using user defined contrib directory: ${CONTRIB_DIR}")
+	file(TO_CMAKE_PATH ${CONTRIB_CUSTOM_DIR} CONTRIB_CUSTOM_DIR_PATH)
+	set(CONTRIB_DIR ${CONTRIB_CUSTOM_DIR_PATH})
+	message(STATUS "Using user defined contrib directory: ${CONTRIB_CUSTOM_DIR_PATH}")
 endif()
 
 # maybe we should change this method to a more robust one
@@ -941,7 +942,7 @@ else()
 	if ("${INSTALL_PREFIX}" STREQUAL ".")
 		string(COMPARE LESS ${CMAKE_MINOR_VERSION} "8" CMAKE_DEPRECATED_VERSION)
 		if (${CMAKE_DEPRECATED_VERSION})
-			message(STATUS "Cannot register OpenMS with CMake! You'll need to set the path to OpenMS for external code yourself during find_package().")
+			message(STATUS "Cannot register OpenMS with CMake! For external code, set the path to OpenMS during find_package() manually.")
 		else()
 			## register OpenMS with CMake so that it can be found easily
 			export(PACKAGE OpenMS)
